<resources>
    <string name="app_name">Ummah</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Please_wait">Please wait..</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="Clear">Clear</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="You_dont_have_internet_connection">You don\'t have internet connection</string>
    <string name="Retry">Retry</string>
    <string name="Exit">Exit</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="text_enter_fname">First name not entered</string>
    <string name="text_enter_lname">Last name not entered</string>
    <string name="text_enter_valid_email">Please enter a valid email ID</string>
    <string name="Forgot_password">Forgot your password?</string>
    <string name="Please_chack">Please check your email send reset password token !</string>
    <string name="Reset_pass">Reset Password</string>
    <string name="Forget_pass">Forget Password</string>
    <string name="Please_inter">Please Enter your register email.</string>
    <string name="Location_not_available">Location not available, Open GPS?</string>
    <string name="Activate_GPS_to_use_use">Activate GPS to use use location services?</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Enter Email</string>
    <string name="text_test">fadsfasdfadsf</string>
    <string name="play_initial_time">00:00</string>
    <string name="track_number">Track</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="facebook_app_id">630301341258833</string>
    <string name="fb_login_protocol_scheme">fb630301341258833</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="server_client_id">889637771668-t9bakjfau8k226s1a3v8rtatttl4n5r3.apps.googleusercontent.com</string>
    <string name="name">Name :</string>
    <string name="Login_to">Log In to your Account</string>
    <string name="Enter_your_email"><![CDATA[Enter your email address & password to log in to your account.]]></string>
    <string name="or_log">Or log in with</string>
    <string name="I_am_a">I am a</string>
    <string name="User">User</string>
    <string name="Business_Owner">Business Owner</string>
    <string name="Mosque_manager">Mosque Manager</string>
    <string name="Continue">Continue</string>
    <string name="Sign_Up">Signup</string>
    <string name="Sign_Up2">Sign up</string>
    <string name="Phone">Enter Phone</string>
    <string name="By_clicking_continue">By Clicking continue you are agree with our terms and conditions.</string>
    <string name="or_sign_up">Or Sign up with</string>
    <string name="Create_new_pass">Create New Password</string>
    <string name="Enter_new_pass">Enter New Password</string>
    <string name="Enter_verification_code">Enter Verification Code</string>
    <string name="Enter_verification_code_sent">Enter verification code sent on your email address</string>
    <string name="Create_new_account">Create New Account</string>
    <string name="Mosque_name">Mosque Name</string>
    <string name="Name_contact_person">Name Contact Person</string>
    <string name="Zip_contact">Zip code</string>
    <string name="or">or</string>
    <string name="Choose_location_automatically">Choose location automatically</string>
    <string name="Type_Mosque_name">Type mosque name</string>
    <string name="Zuhru">Zuhru</string>
    <string name="Lorem">Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</string>
    <string-array name="walkThroughDescription">
        <item>Lorem ipsum dolor sit amet,\nconsetetsadipscing elitr,sed diam monumy.</item>
        <item>Lorem ipsum dolor sit amet,\nconsetetsadipscing elitr,sed diam monumy.</item>
        <item>Lorem ipsum dolor sit amet,\nconsetetsadipscing elitr,sed diam monumy.</item>

    </string-array>
    <string-array name="walkThroughHeaderArray">
        <item>Lorem ipsum\ndolor sit amet sit</item>
        <item>Lorem ipsum\ndolor sit amet sit</item>
        <item>Lorem ipsum\ndolor sit amet sit</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Find_a_mosque">Find a mosque</string>
    <string name="Todays_feed">Today\'s Feed</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_search">Search</string>
    <string name="title_danation">Donation</string>
    <string name="tilte_Perf">Prefs</string>
    <string name="Quran">Quran</string>
    <string name="Community">Community</string>
    <string name="Setting">Settings</string>
    <string name="Qiblah">Qiblah</string>
    <string name="Quiz">Quiz</string>
    <string name="Personnage">Personnage</string>
    <string name="Zakkat_Calculator">Zakkat Calculator</string>
    <string name="Hajj_and_Umrah">Hajj and Umrah</string>
    <string name="Supplication">Supplication</string>
    <string name="Business">Business</string>
    <string name="Organization">Organization</string>
    <string name="Donation">Donation</string>
    <string name="Prefs">Prefs</string>
    <string name="Select_home_mosque">Select Home Mosque</string>
    <string name="Open">Open</string>
    <string name="Prayer_Time">Prayer Time</string>
    <string name="Sura">Sura</string>
    <string name="General_knowledge">General Knowledge</string>
    <string name="Hujj_knowledge">Hujj knowledge</string>
    <string name="Religion_knowledge">Religion knowledge</string>
    <string name="Quran_knowledge">Quran knowledge</string>
    <string name="Notification">Notification</string>
    <string name="Language_of">Language of the App</string>
    <string name="Quran_Translation">Quran Translation</string>
    <string name="Prayer_Names">Prayer Names</string>
    <string name="Term_and_Condition">Term and Condition</string>
    <string name="Language">Language</string>
    <string name="Log_out">Log Out</string>
    <string name="What_you_are">What You Are Looking For?</string>
    <string name="All">All</string>
    <string name="Morning_Evening"><![CDATA[Morning & Evening]]></string>
    <string name="Travel">Travel</string>
    <string name="Home_Family"><![CDATA[Home & Family]]></string>
    <string name="Joy_Distress"><![CDATA[Joy & Distress]]></string>
    <string name="Prayer">Prayer</string>
    <string name="Praising_allah">Praising Allah</string>
    <string name="Nature">Nature</string>
    <string name="Good_Etiquette">Good Etiquette</string>
    <string name="Food_drink"><![CDATA[Food  & Dring]]></string>
    <string name="Book_business">Book Business</string>
    <string name="Religion_clothing">Religion clothing</string>
    <string name="Incense_Business">Incense Business</string>
    <string name="My_favourite_Mosque">My favourite Mosque</string>
    <string name="Enter_Mosque_name">Enter Mosque Name</string>
    <string name="khutba">khutba</string>
    <string name="Education">Education</string>
    <string name="Activity">Activities</string>
    <string name="Rules_of_the_Game">Rules of the Game</string>
    <string name="Lets_play">Let\'s Play</string>
    <string name="Correcrt_Answer">Correct Answer</string>
    <string name="Replay">Replay</string>
    <string name="Wrong_answer">Wrong Answer</string>
    <string name="Done">Done</string>
    <string name="Profile">Profile</string>
    <string name="My_home_mosque">My Home Mosque</string>
    <string name="My_Donation">My Donation</string>
    <string name="Following">Following</string>
    <string name="Following_Mosque">Following Mosque</string>
    <string name="Home_Mosque">Home Mosque</string>
    <string name="Add_new_home">Add New Home Mosque</string>
    <string name="Umrah">Umrah</string>
    <string name="Hajj">Hajj</string>
    <string name="A_request">A request of pilgrims</string>
    <string name="Departure_from">Departure from your house</string>
    <string name="The_method_of_ehram">The method of ehram</string>
    <string name="The_ehram_of_men">The ehram of men</string>
    <string name="The_ehram_of_women">The ehram of women</string>
    <string name="The_ehram_of_children">The ehram of children</string>
    <string name="The_three_type_of_hujj">The three type of hujj</string>
    <string name="Qibla">Qibla</string>
    <string name="All_community">All</string>
    <string name="Mine">Mine</string>
    <string name="street_address">Street Address</string>
    <string name="confirm_Pass">Confirm Password</string>
    <string name="Log_in_to">Log In to your Account</string>
    <string name="Login_via_Facebook">Login via Facebook</string>
    <string name="Login_via_Gmail">Login via Gmail</string>
    <string name="Type_business_name_heare">Type business name here</string>
    <string name="Map">Map</string>
    <string name="Signup_via_Facebook">Signup via Facebook</string>
    <string name="Signup_via_Gmail">Signup via Gmail</string>
    <string name="Settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="reset_password_token">Reset Password Token</string>
</resources>