<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg"
android:orientation="vertical">

<ImageView
    android:id="@+id/Iv_back"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_gravity="left"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:padding="5dp"
    android:src="@drawable/outline_arrow_back_white" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="10dp"
    android:padding="5dp"
    android:text="@string/I_am_a"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold" />

<ImageView
    android:id="@+id/Iv_user"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:background="@drawable/ic_user_bg"
    android:padding="20dp"
    />

<TextView
    android:id="@+id/Tv_user"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="3dp"
    android:padding="3dp"
    android:text="@string/User"
    android:textColor="@color/white"
    android:textSize="12sp"
    android:textStyle="normal" />

<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:padding="5dp"
    android:id="@+id/Iv_Business_owner"
    android:visibility="gone"
    android:background="@drawable/ic_business_owner_bg" />

<TextView
    android:id="@+id/Tv_Business_owner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    android:layout_marginTop="3dp"
    android:padding="3dp"
    android:text="@string/Business_Owner"
    android:textColor="@color/white"
    android:textSize="12sp"
    android:textStyle="normal" />

<ImageView
    android:id="@+id/Iv_Mosque"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:padding="5dp"
    android:background="@drawable/ic_mosque_manager_with_bg" />

<TextView
    android:id="@+id/Tv_Mosque"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="3dp"
    android:padding="3dp"
    android:text="@string/Mosque_manager"
    android:textColor="@color/white"
    android:textSize="12sp"
    android:textStyle="normal" />

<Button
    android:id="@+id/Bt_Continue"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/background_green"
    android:text="@string/Continue"
    android:textSize="12sp"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textStyle="bold" />



</LinearLayout>