<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/main_bg"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/outline_arrow_back_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Forget_pass"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:lines="2"
        android:visibility="visible"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/Please_inter"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/Et_email"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:drawablePadding="10dp"
        android:layout_marginRight="40dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12dp"
        android:background="@drawable/background_transparent"
        android:hint="@string/Email"/>


    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:background="@drawable/background_green"
        android:layout_gravity="center"/>

</LinearLayout>