<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:padding="5dp"

                android:src="@drawable/outline_arrow_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/Reset_pass"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:padding="0dp"
            android:text="@string/Reset_pass"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:text="@string/Please_chack"
            android:textColor="@color/white"
            android:textSize="12sp" />



        <EditText
            android:id="@+id/Et_access_key"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_transparent"
            android:drawablePadding="10dp"
            android:hint="@string/reset_password_token"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Et_New_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:drawableRight="@drawable/password_hide"

            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_transparent"
            android:drawablePadding="10dp"
            android:hint="@string/new_password"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Et_Confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_transparent"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:drawableRight="@drawable/password_hide"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />


        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:textSize="12sp"
            android:background="@drawable/background_green"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>